--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
  <head>
     <title>BMI Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Bmi.ico" type="image/x-icon">
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>BMI Calculator</h1>
@@ -19,7 +21,23 @@
         <input type="button" value="Calculate BMI" onclick="calculateBMI()">
     </form>
     <div id="result"></div>
+    <div class="video-section">
+    <video width="400" height="300" autoplay muted loop>
+        <source src="body.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      </div>
+      <div class="meter">
+        <video class="bottom-video" width="100%" height="500" autoplay muted loop>
+          <source src="meter.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+    </div>
 
-    <script src="script.js"></script>
+      <div class="table">
+        <img src="table.png" alt="table">
+    </div>
+    
+     
 </body>
 </html>
