--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="script.js"></script>
 </head>
 <body>
+  <div class="container">
     <h1>BMI Calculator</h1>
     <form>
         <label for="height">Height:</label>
@@ -21,6 +22,7 @@
         <input type="button" value="Calculate BMI" onclick="calculateBMI()">
     </form>
     <div id="result"></div>
+</div>
     <div class="video-section">
     <video width="400" height="300" autoplay muted loop>
         <source src="body.mp4" type="video/mp4">
@@ -37,7 +39,6 @@
       <div class="table">
         <img src="table.png" alt="table">
     </div>
-    
-     
+   
 </body>
 </html>
