--- a/normal.html
+++ b/normal.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container2">
     <h1>Normal weight</h1>
     <p id="normalbmi"></p>
     <p>You have a normal weight. Here are some tips to maintain it:</p>
@@ -33,11 +34,13 @@
     <li>Limit the time you spend being physically inactive</li>
 </ul>
 <a href="https://www.pnbmetlife.com/articles/health/healthy-bmi-for-women-importance-tips-and-guidelines.html" target="_blank">click here to know more</a>
-    <div class="normal">
+   
+<div class="normal">
         <img src="normal.jpeg" alt="Underweight Image" class="normal-image">
     </div>
     <div class="bottom-image-container">
         <img src="table.png" alt="Bottom Image">
+    </div>
     </div>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
