--- a/obese.html
+++ b/obese.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container4">
     <h1>Obese</h1>
     <p id="obese"></p>
     <p>You are obese. Here are some tips to reduce weight:</p>
@@ -27,11 +28,13 @@
     <li>Consider professional support such as dieticians or fitness coaches.</li>
 </ul>
 <a href="https://www.mayoclinic.org/diseases-conditions/obesity/diagnosis-treatment/drc-20375749" target="_blank">click here to know more</a>
-    <div class="obese">
+       
+<div class="obese">
         <img src="obese.jpg" alt="Underweight Image" class="under-image">
     </div>
     <div class="bottom-image-container">
         <img src="table.png" alt="Bottom Image">
+    </div>
     </div>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
