--- a/overweight.html
+++ b/overweight.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container3">
     <h1>Overweight</h1>
     <p id="over"></p>
     <p>You are overweight. Here are some tips to reduce weight:</p>
@@ -26,11 +27,13 @@
     <li>Be consistent and patient with your routine.</li>
 </ul>
 <a href="https://www.nhlbi.nih.gov/health/educational/lose_wt/index.htm" target="_blank">click here to know more</a>
+
     <div class="over">
         <img src="over.jpg" alt="Underweight Image" class="over-image">
     </div>
     <div class="bottom-image-container">
         <img src="table.png" alt="Bottom Image">
+    </div>
     </div>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
