--- a/underweight.html
+++ b/underweight.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    
+    <div class="container1">
     <h1>Underweight</h1>
     <p id="finalresult"></p>
     <p>You are underweight. Here are some tips to gain weight:</p>
@@ -29,12 +29,15 @@
 </li>
 </ul>
 <a href="https://www.healthdirect.gov.au/what-to-do-if-you-are-underweight#:~:text=You%20can%20put%20on%20weight,coffee%2C%20tea%20or%20with%20meals" target="_blank">click here to know more</a>
+
 <div class="under">
     <img src="underweight.jpg" alt="Underweight Image" class="under-image">
 </div>
 <div class="bottom-image-container">
     <img src="table.png" alt="Bottom Image">
 </div>
+</div>
+
 <script>
     const urlParams = new URLSearchParams(window.location.search);
 const bmi = urlParams.get('bmi');
